--- a/myFirstApp/app/src/main/res/values/strings.xml
+++ b/myFirstApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">MyFirstApp</string>
+    <string name="app_name">MessageApp</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
+    <string name="greeting">Welcome to the Message App!</string>
 </resources>
